# django_uvicorn

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  readme.md
core/: settings.py  urls.py
persons/: models.py  tests.py  urls.py
persons/api/: urls.py
persons/api/v1/: serializers.py  urls.py  views.py
persons/migrations/: 0001_initial.py
